--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="save_button">Save Button</string>
     <string name="default_title">New Notes</string>
+    <string name="not_load_data">Not Notes</string>
+    <string name="internet_problem">Not Internet</string>
 </resources>
